Fix Alert Width on Mobile

--- a/less/forum/Post.less
+++ b/less/forum/Post.less
@@ -213,7 +213,7 @@
 }
 .IpAlertInput {
   display: inline-block;
-  width: 85%;
+  width: 130px;
 }
 
 .EventPost-icon {
